tolk-tester/tests/invalid-syntax/err-3853.tolk
fun main(int): int {
    
}

/**
@compilation_should_fail
@stderr expected `: <parameter_type>`, got `)`
*/
